--- a/project.html
+++ b/project.html
@@ -195,7 +195,7 @@
             <div class="form">
                 <input type="name" placeholder="Full Name">
                 <input type="email" placeholder="Email Adress">
-                <input type="text" placeholder="Text">
+                <button>submit</button>
                 <button>Send Message</button>
             </div>
         </section>
